# ASC-Project-Entry-Exit-Dashboard

./: .gitignore  ACCESS_INSTRUCTIONS.md  README.md  SERVICE_MANAGEMENT.md  asc-dashboard-backend.service  asc-dashboard-frontend.service  build_and_start.sh  main.py  manage_services.sh  nginx-asc-dashboard-bootstrap.conf  nginx-asc-dashboard.conf  nohup_backend.out  nohup_frontend.out  pyproject.toml  requirements.txt  setup_dashboard.bat  setup_https_certbot.sh  setup_manual.md  start_backend.sh  start_dashboard.bat  start_dashboard.sh  start_frontend.sh
asc_dashboard/: wsgi.py
backend/: .env.example  Topic Values.txt  manage.py  pyproject.toml  requirements.txt
backend/asc_dashboard/: asgi.py  settings.py  urls.py
backend/surveys/: admin.py  authentication.py  jwt_cookies.py  models.py  qualtrics_api.py  serializers.py  urls.py  views.py
backend/surveys/management/commands/: import_survey_data.py
backend/surveys/migrations/: 0001_initial.py  0002_surveyresponse_normalized_communications_and_more.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  index.js
frontend/src/api/: apiClient.js
frontend/src/components/: FilterControls.css  FilterControls.js  Login.css  Login.js  ResponseDetailModal.css  ResponseDetailModal.js  SubmissionsList.css  SubmissionsList.js  SummaryNumbers.css  SummaryNumbers.js
surveys/: models.py  serializers.py  urls.py  views.py
surveys/management/commands/: import_survey_data.py
